--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
+    "@mui/material": "^6.3.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
+    "@tsparticles/all": "^3.7.1",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +37,7 @@
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.5.0"
   },
