--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.3.0",
     "@radix-ui/react-dialog": "^1.1.3",
